src/Styles/top_nav.scss
.top_nav {
  top: 3vh;
  display: flex;
  right: 3vw;
  width: 100%;
  // gap: 5vw;
  z-index: 3;
  justify-content: space-around;
  padding-bottom: 30px;

  .top_nav_links {
    display: flex;
    gap: 5vw;
  }

  a {
    font-size: 22px;
    color: #ffffff;
    display: block;
    line-height: 51px;
    height: 51px;
    position: relative;
    text-decoration: none;

    i {
      transition: all 0.3s ease-out;
    }

    &:hover {
      color: gold;

      svg {
        opacity: 0;
      }

      &:after {
        opacity: 1;
      }
    }
    &:after {
      content: "";
      font-size: 12px;
      letter-spacing: 2px;
      position: absolute;
      bottom: 0;
      display: block;
      width: 100%;
      text-align: center;
      opacity: 0;
      transition: all 0.3s ease-out;
      -webkit-transition: all 0.3s ease-out;
    }
    &:first-child {
      &:after {
        content: "LINKEDIN";
      }
    }
  }
  a.github-icon {
    &:after {
      content: "GITHUB";
    }
  }
  a.contact-icon {
    padding-top: 1vh;

    &:after {
      content: "CONTACT";
    }
  }
}

